// Copyright 2022 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package deploy.service;

option go_package = "go.chromium.org/luci/deploy/api/rpcpb";

import "go.chromium.org/luci/deploy/api/modelpb/asset.proto";


// Assets service allows to view and interact with Assets.
service Assets {
  // GetAsset returns an Asset given its ID.
  rpc GetAsset(GetAssetRequest) returns (deploy.model.Asset);
  // ListAssets lists assets matching specified filters (if any).
  rpc ListAssets(ListAssetsRequest) returns (ListAssetsResponse);
}


// GetAssetRequest specifies what asset to fetch.
message GetAssetRequest {
  string asset_id = 1;
}


// ListAssetsRequest specifies what assets to list.
//
// Empty request means to list all available assets.
message ListAssetsRequest {
}


// ListAssetsResponse contains asset listing.
message ListAssetsResponse {
  // Assets in order of their IDs.
  repeated deploy.model.Asset assets = 1;
}
